transactions controller and docs made
